# aghub

./: .impeccable.md  .prettierrc  AGENTS.md  CLAUDE.md  Cargo.toml  README.CN.md  README.md  cliff.toml  justfile  skills-lock.json
.agents/skills/project-form-patterns/: SKILL.md
.claude/skills/init-deep/: SKILL.md
.github/workflows/: ci.yml  homebrew.yml  release.yml
crates/agents/: Cargo.toml
crates/agents/src/: codex_sub_agents.rs  descriptor.rs  lib.rs  models.rs  sub_agents.rs
crates/agents/src/agents/: amp.rs  antigravity.rs  augmentcode.rs  claude.rs  cline.rs  codex.rs  copilot.rs  cursor.rs  factory.rs  gemini.rs  jetbrains_ai.rs  kilocode.rs  kimi.rs  kiro.rs  mistral.rs  openclaw.rs  opencode.rs  pi.rs  roocode.rs  trae.rs  warp.rs  windsurf.rs  zed.rs
crates/agents/src/agents/codex/: sub_agent.rs
crates/agents/src/format/: json_list.rs  json_map.rs  toml_format.rs
crates/api/: AGENTS.md  Cargo.toml
crates/api/bindings/: CapabilitiesDto.ts  CreateMcpRequest.ts  MarketSkill.ts  McpResponse.ts  (+2 more)
crates/cli/: AGENTS.md  Cargo.toml
crates/cli/src/: main.rs
crates/cli/src/commands/: add.rs  delete.rs  disable.rs  enable.rs  get.rs  interactive.rs  update.rs
crates/cli/src/ui/: search.rs
crates/cli/tests/: cli_tests.rs
crates/core/: AGENTS.md  Cargo.toml
crates/core/src/: adapter.rs  all_agents.rs  availability.rs  errors.rs  lib.rs  manager.rs  models.rs  paths.rs  testing.rs  transfer.rs
crates/core/src/adapters/: claude.rs  list.rs  map.rs  mod.rs  opencode.rs  toml.rs
crates/core/src/agents/: amp.rs  antigravity.rs  augmentcode.rs  claude.rs  cline.rs  codex.rs  copilot.rs  cursor.rs  factory.rs  gemini.rs  jetbrains_ai.rs  kilocode.rs  kimi.rs  kiro.rs  mistral.rs  mod.rs  openclaw.rs  opencode.rs  pi.rs  roocode.rs  trae.rs  warp.rs  windsurf.rs  zed.rs
crates/core/src/format/: json_list.rs  json_map.rs  json_opencode.rs  toml_format.rs
crates/core/src/manager/: mod.rs  skill.rs  sub_agent.rs
crates/core/src/registry/: descriptor.rs  mod.rs
crates/core/src/skills/: discovery.rs  mod.rs
crates/core/tests/: integration_tests.rs  mcp_tests.rs  test_agent_paths.rs
crates/desktop/: AGENTS.md  CLAUDE.md  eslint.config.js  index.html  package.json  vite.config.ts
crates/plugins/: Cargo.toml
crates/skill/: AGENTS.md
crates/skills-ref/: Cargo.toml  README.md
crates/skills-ref/src/: cli.rs  errors.rs  lib.rs  models.rs  parser.rs  prompt.rs  validator.rs
crates/skills-ref/tests/: test_parser.rs  test_prompt.rs  test_validator.rs
docs/: deep-link-manual-testing.md
fixtures/.cline/: mcp.json
(+185 files in other folders)
