[package]
name = "aghub-agents"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
dirs = { workspace = true }
which = "7"
aghub-markdown = { path = "../markdown" }
aghub-plugins = { path = "../plugins", optional = true }

[features]
default = []
claude-plugins = ["aghub-plugins"]

[dev-dependencies]
tempfile = { workspace = true }
