[package]
name = "aghub-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "CLI tool for managing Code Agent configurations"

[[bin]]
name = "aghub-cli"
path = "src/main.rs"

[dependencies]
aghub-core = { path = "../core" }
aghub-agents = { path = "../agents" }
aghub-plugins = { path = "../plugins", optional = true }
skill = { path = "../skill" }

clap = { workspace = true }
tabled = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[features]
default = ["claude-plugins"]
claude-plugins = ["aghub-agents/claude-plugins", "dep:aghub-plugins"]

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }
