[package]
name = "aghub-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
dirs = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[features]
default = []
agent-validation = []
