[package]
name = "skills-ref"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Reference library for Agent Skills - parse and validate SKILL.md files"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
unicode-normalization = "0.1"
clap = { workspace = true, optional = true }

[dev-dependencies]
tempfile = { workspace = true }

[features]
default = ["cli"]
cli = ["dep:clap"]

[[bin]]
name = "skills-ref"
path = "src/cli.rs"
required-features = ["cli"]
